syntax = "proto3";

package proto;

option java_package = "no.proto.generated";
option java_multiple_files = true;

service GreeterService {
  rpc sayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}